force-app/main/default/objects/Document__c/fields/Extensions__c.field-meta.xml
<CustomField>
    <fullName>Extensions__c</fullName>
    <label>Extensions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.docx</fullName>
            </value>
            <value>
                <fullName>.pdf</fullName>
            </value>
            <value>
                <fullName>.ppt</fullName>
            </value>
            <value>
                <fullName>.pptx</fullName>
            </value>
            <value>
                <fullName>.xls</fullName>
            </value>
            <value>
                <fullName>.xlsx</fullName>
            </value>
            <value>
                <fullName>.gif</fullName>
            </value>
            <value>
                <fullName>.jpg</fullName>
            </value>
            <value>
                <fullName>.png</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>