force-app/main/default/objects/Document__c/fields/Multiple__c.field-meta.xml
<CustomField>
    <fullName>Multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple</label>
    <type>Checkbox</type>
</CustomField>