force-app/main/default/objects/Document__c/fields/Single__c.field-meta.xml
<CustomField>
    <fullName>Single__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single</label>
    <type>Checkbox</type>
</CustomField>